Issue #13 - Fix a buffer a overflow in ID3 support

https://gitlab.freedesktop.org/libopenraw/exempi/issues/13